open new tab when clicking on link

--- a/index.html
+++ b/index.html
@@ -80,15 +80,19 @@
       <div class="attractions-image-parent">
         <div class="attraction empirestate">
           <h>EMPIRE STATE BUILDING</h>
+          <a href="https://www.esbnyc.com/" target="_blank"></a>
         </div>
         <div class="attraction liberty">
           <h>STATUE OF LIBERTY</h>
+          <a href="https://www.nps.gov/stli/index.htm" target="_blank"></a>
         </div>
         <div class="attraction times">
           <h>TIMES SQUARE</h>
+          <a href="https://www.timessquarenyc.org/" target="_blank"></a>
         </div>
         <div class="attraction radiocity">
           <h>RADIO CITY MUSIC HALL</h>
+          <a href="https://www.msg.com/radio-city-music-hall" target="_blank"></a>
         </div>
       </div>
       <div class="attractions-text">
@@ -114,13 +118,13 @@
       </div>
       <div class="restaurants">
         <div class="restaurants katz">
-          <a href="https://goo.gl/maps/mfNnNCSkVDSjse7K9"></a>
+          <a href="https://goo.gl/maps/mfNnNCSkVDSjse7K9" target="_blank"></a>
         </div>
         <div class="restaurants sugar">
-          <a href="https://goo.gl/maps/LAP17N2AkHtQdQt56"></a>
+          <a href="https://goo.gl/maps/LAP17N2AkHtQdQt56" target="_blank"></a>
         </div>
         <div class="restaurants russiantearoom">
-          <a href="https://goo.gl/maps/poNyFgemkdTyahox7"></a>
+          <a href="https://goo.gl/maps/poNyFgemkdTyahox7" target="_blank"></a>
         </div>
       </div>
       <div class="restaurants-text">
@@ -147,17 +151,17 @@
       <div class="more-circles">
         <div class="more-circles news">
           <h>NEWS</h>
-          <a href="https://abc7ny.com/new-york/"></a>
+          <a href="https://abc7ny.com/new-york/" target="_blank"></a>
         </div>
         <div class="more-circles weather">
           <h>WEATHER</h>
           <a
-            href="https://weather.com/weather/today/l/f892433d7660da170347398eb8e3d722d8d362fe7dd15af16ce88324e1b96e70"
+            href="https://weather.com/weather/today/l/f892433d7660da170347398eb8e3d722d8d362fe7dd15af16ce88324e1b96e70" target="_blank"
           ></a>
         </div>
         <div class="more-circles contactus">
           <h>CONTACT<br />US</h>
-          <a href="https://www1.nyc.gov/home/contact-us.page"></a>
+          <a href="https://www1.nyc.gov/home/contact-us.page target="_blank""></a>
         </div>
       </div>
       <div class="more-links">
@@ -173,7 +177,7 @@
       <div class="copyright-container">
         <div class="copyright-container copy">
           <h>Copyright 2021 | Zack Rimshnick</h>
-          <a href="https://www.linkedin.com/in/zack-rimshnick-b9b659200/"></a>
+          <a href="https://www.linkedin.com/in/zack-rimshnick-b9b659200/" target="_blank"></a>
         </div>
       </div>
     </section>
