--- a/index.html
+++ b/index.html
@@ -78,21 +78,24 @@
         <h>ATTRACTIONS</h>
       </div>
       <div class="attractions-image-parent">
-        <div class="attraction empirestate">
+        <div class="attraction empirestate" alt="Empire State Building Link">
           <h>EMPIRE STATE BUILDING</h>
           <a href="https://www.esbnyc.com/" target="_blank"></a>
         </div>
-        <div class="attraction liberty">
+        <div class="attraction liberty" alt="Statue of Liberty Link">
           <h>STATUE OF LIBERTY</h>
           <a href="https://www.nps.gov/stli/index.htm" target="_blank"></a>
         </div>
-        <div class="attraction times">
+        <div class="attraction times" alt="Times Square Link">
           <h>TIMES SQUARE</h>
           <a href="https://www.timessquarenyc.org/" target="_blank"></a>
         </div>
-        <div class="attraction radiocity">
+        <div class="attraction radiocity" alt="Radio City Music Hall Link">
           <h>RADIO CITY MUSIC HALL</h>
-          <a href="https://www.msg.com/radio-city-music-hall" target="_blank"></a>
+          <a
+            href="https://www.msg.com/radio-city-music-hall"
+            target="_blank"
+          ></a>
         </div>
       </div>
       <div class="attractions-text">
@@ -117,13 +120,13 @@
         <h>RESTAURANTS</h>
       </div>
       <div class="restaurants">
-        <div class="restaurants katz">
+        <div class="restaurants katz" alt="Katz's Delicatessen Link">
           <a href="https://goo.gl/maps/mfNnNCSkVDSjse7K9" target="_blank"></a>
         </div>
-        <div class="restaurants sugar">
+        <div class="restaurants sugar" alt="Sugar Factory Link">
           <a href="https://goo.gl/maps/LAP17N2AkHtQdQt56" target="_blank"></a>
         </div>
-        <div class="restaurants russiantearoom">
+        <div class="restaurants russiantearoom" alt="Russian Tea Room Link">
           <a href="https://goo.gl/maps/poNyFgemkdTyahox7" target="_blank"></a>
         </div>
       </div>
@@ -149,19 +152,23 @@
         <h>LEARN MORE</h>
       </div>
       <div class="more-circles">
-        <div class="more-circles news">
+        <div class="more-circles news" alt="New York City News">
           <h>NEWS</h>
           <a href="https://abc7ny.com/new-york/" target="_blank"></a>
         </div>
-        <div class="more-circles weather">
+        <div class="more-circles weather" alt="New York City Weather">
           <h>WEATHER</h>
           <a
-            href="https://weather.com/weather/today/l/f892433d7660da170347398eb8e3d722d8d362fe7dd15af16ce88324e1b96e70" target="_blank"
+            href="https://weather.com/weather/today/l/f892433d7660da170347398eb8e3d722d8d362fe7dd15af16ce88324e1b96e70"
+            target="_blank"
           ></a>
         </div>
-        <div class="more-circles contactus">
+        <div class="more-circles contactus" alt="Contact New York City">
           <h>CONTACT<br />US</h>
-          <a href="https://www1.nyc.gov/home/contact-us.page target="_blank""></a>
+          <a
+            href="https://www1.nyc.gov/home/contact-us.page"
+            target="_blank"
+          ></a>
         </div>
       </div>
       <div class="more-links">
@@ -175,9 +182,12 @@
         />
       </div>
       <div class="copyright-container">
-        <div class="copyright-container copy">
+        <div class="copyright-container copy" alt="Zack Rimshnick linkedin">
           <h>Copyright 2021 | Zack Rimshnick</h>
-          <a href="https://www.linkedin.com/in/zack-rimshnick-b9b659200/" target="_blank"></a>
+          <a
+            href="https://www.linkedin.com/in/zack-rimshnick-b9b659200/"
+            target="_blank"
+          ></a>
         </div>
       </div>
     </section>
