--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <header class="container">
       <div class="empire">
-        <img src="img/empire-state-building.png" />
+        <img src="img/empire-state-building.png" alt="Empire State Logo" />
       </div>
       <div class="left-side">
         <li><a href="#newyorkcity" class="newyorkcity">New York City</a></li>
