--- a/index.html
+++ b/index.html
@@ -78,9 +78,13 @@
         <h>ATTRACTIONS</h>
       </div>
       <div class="attractions-image-parent">
-        <div class="attraction empirestate" alt="Empire State Building Link">
+        <div class="attraction empirestate">
           <h>EMPIRE STATE BUILDING</h>
-          <a href="https://www.esbnyc.com/" target="_blank"></a>
+          <a
+            href="https://www.esbnyc.com/"
+            target="_blank"
+            alt="Empire State Building Link"
+          ></a>
         </div>
         <div class="attraction liberty" alt="Statue of Liberty Link">
           <h>STATUE OF LIBERTY</h>
