--- a/index.html
+++ b/index.html
@@ -80,11 +80,9 @@
       <div class="attractions-image-parent">
         <div class="attraction empirestate">
           <h>EMPIRE STATE BUILDING</h>
-          <a
-            href="https://www.esbnyc.com/"
-            target="_blank"
-            alt="Empire State Building Link"
-          ></a>
+          <a href="https://www.esbnyc.com/" target="_blank"
+            >Empire State Building</a
+          >
         </div>
         <div class="attraction liberty" alt="Statue of Liberty Link">
           <h>STATUE OF LIBERTY</h>
