--- a/index.html
+++ b/index.html
@@ -81,23 +81,26 @@
         <div class="attraction empirestate">
           <h>EMPIRE STATE BUILDING</h>
           <a href="https://www.esbnyc.com/" target="_blank"
-            >Empire State Building</a
+            >Empire State Building Link</a
           >
         </div>
-        <div class="attraction liberty" alt="Statue of Liberty Link">
+        <div class="attraction liberty">
           <h>STATUE OF LIBERTY</h>
-          <a href="https://www.nps.gov/stli/index.htm" target="_blank"></a>
+          <a href="https://www.nps.gov/stli/index.htm" target="_blank"
+            >Statue of Liberty Link</a
+          >
         </div>
-        <div class="attraction times" alt="Times Square Link">
+        <div class="attraction times">
           <h>TIMES SQUARE</h>
-          <a href="https://www.timessquarenyc.org/" target="_blank"></a>
+          <a href="https://www.timessquarenyc.org/" target="_blank"
+            >Times Square Link</a
+          >
         </div>
-        <div class="attraction radiocity" alt="Radio City Music Hall Link">
+        <div class="attraction radiocity">
           <h>RADIO CITY MUSIC HALL</h>
-          <a
-            href="https://www.msg.com/radio-city-music-hall"
-            target="_blank"
-          ></a>
+          <a href="https://www.msg.com/radio-city-music-hall" target="_blank"
+            >Radio City Music Hall Link</a
+          >
         </div>
       </div>
       <div class="attractions-text">
