added icon logo in tab bar

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New York City</title>
+    <link rel="icon" href="/img/empire-state-building.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap"
       rel="stylesheet"
