--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
       <video id="video" autoplay muted loop>
         <source src="/video/night-drone-nyc.mp4" type="video/mp4" />
       </video>
-      <h class="video-text">NYC</h>
+      <h1 class="video-text">NYC</h1>
     </div>
     <section id="culture" class="culture-container">
       <div class="culture-label">
-        <h>CULTURE</h>
+        <h2>CULTURE</h2>
       </div>
       <div class="culture-image-parent">
         <div class="culture-images">
@@ -76,7 +76,7 @@
     </section>
     <section id="attractions" class="attractions-container">
       <div class="attractions-label">
-        <h>ATTRACTIONS</h>
+        <h3>ATTRACTIONS</h3>
       </div>
       <div class="attractions-image-parent">
         <div class="attraction empirestate">
@@ -123,7 +123,7 @@
     </section>
     <section id="restaurants" class="restaurants-container">
       <div class="restaurants-label">
-        <h>RESTAURANTS</h>
+        <h4>RESTAURANTS</h4>
       </div>
       <div class="restaurants">
         <div class="restaurants katz" alt="Katz's Delicatessen Link">
@@ -155,7 +155,7 @@
     </section>
     <section id="more" class="more-container">
       <div class="more-label">
-        <h>LEARN MORE</h>
+        <h5>LEARN MORE</h5>
       </div>
       <div class="more-circles">
         <div class="more-circles news" alt="New York City News">
